<resources>
    <string name="app_name">Comic Viewer</string>
    <string name="open_browser">File Browser</string>
    <string name="select_folder">Select Folder</string>
    <string name="img_page">Image of Page</string>
    <string name="no_page">Number of Page</string>

    <string name="title_activity_guided_view">GuidedViewActivity</string>
    <string name="next_page">Next</string>
    <string name="prev_page">Previous</string>
    <string name="refine_panel">Refine</string>
    <string name="action_mode">Mode</string>
    <string name="pref_title_guide_settings">Guided Reader Settings</string>
    <string name="pref_key_guide_image_process">Image Processing</string>
    <string name="pref_key_guide_panel">Find Panels</string>
    <string name="pref_summary_guide_image_threshold_otsu">Enable Otsu Thresholding</string>
    <string name="pref_title_guide_image_threshold_otsu">Otsu Thresholding</string>
    <string name="pref_summary_image_threshold_value">Threshold value for binary thresholding (80–255)</string>
    <string name="pref_title_image_threshold_value">Threshold value</string>
    <string name="pref_summary_guide_panel_split">Split large detected panels again</string>
    <string name="pref_title_guide_panel_split">Split large panels</string>
    <string name="pref_summary_guide_panel_split_rows">The number of rows to split (1–3)</string>
    <string name="pref_title_guide_panel_split_rows">Rows</string>
    <string name="pref_summary_guide_panel_split_cols">The number of cols to split (1–3)</string>
    <string name="pref_title_guide_panel_split_cols">Cols</string>
    <string name="pref_title_guide_image_process">Image Processing</string>
    <string name="pref_title_guide_panel">Find Panels</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reader_setting">Guided Read Settings</string>
    <string name="pref_summary_guide_panel_split_keep">Keep pre-split panel in the queue</string>
    <string name="pref_title_guide_panel_split_keep">Keep pre-split panel</string>
    <string name="pref_summary_guide_panel_split_manual">Manually decide the parameter for splitting large panels</string>
    <string name="pref_title_guide_panel_split_manual">Custom split parameters</string>
    <string name="pref_title_guide_panel_split_area">Panel Area Threshold (%)</string>
    <string name="pref_summary_guide_panel_split_area">The area threshold for a panel to be split (10–80)</string>
    <string name="title_app_icon">Icon of the app</string>
    <string name="pref_summary_guide_sort_four">Alternative panel sorting for 4-Koma</string>
    <string name="pref_title_guide_sort_four">4-Koma Sort</string>
    <string name="pref_title_guide_sort">Panel Sorting</string>
    <string name="pref_summary_guide_sort_four_merge">Merge 4-Koma panels to a strip</string>
    <string name="pref_title_guide_sort_four_merge">Merge 4-Koma Strip</string>
</resources>
